bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:4: error: not found: value Maths
  if(Maths.abs(a)<10) {
     ^NearHundred:7: error: not found: value Maths
  if(Maths.abs(b)<10) {
     ^